--- a/main.css
+++ b/main.css
@@ -87,7 +87,6 @@ footer p {
     font-size: 1.1em;
     display: inline;
     top: 3px;
-    left: 10px;
     position: relative;
     font-family: Noto !important;
 }
@@ -100,7 +99,7 @@ footer img {
 }
 
 ul {
-	padding-left: 2em; 
+	padding-left: 2em;
 }
 
 ul li {
@@ -120,7 +119,7 @@ ul li {
 .socials img {
     position: relative;
     top: calc(50% - 32px);
-    width: 90px;
+    width: 86px;
     transform: scale(1);
     transition: all .2s;
 }
@@ -197,7 +196,7 @@ p.bold {
 .top {
     width: 100vw;
     min-height: 270px;
-    height: auto; 
+    height: auto;
     background-image: url('images/top.png');
     background-size: cover;
     background-position: 35%;
@@ -291,6 +290,8 @@ img.next {
     color: white;
     text-align: center;
     font-size: 0.8em;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 #copyright a {
@@ -351,9 +352,9 @@ span.available:before {
 }
 
 #logo {
-    margin-left: 125px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 60px;
-    width: 470px;
 }
 
 /* Slider */
@@ -362,7 +363,9 @@ span.available:before {
     border: 1px solid #aaa;
     margin-right: 5px;
     margin-bottom: 5px;
-    vertical-align: top;
 }
 
-
+iframe {
+  width: 100%;
+  height: 300px;
+}
